--- a/Original/shop/1/open.html
+++ b/Original/shop/1/open.html
@@ -180,7 +180,7 @@
                 <div id="product-carousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner bg-light">
                         <div class="carousel-item active">
-                            <img class="w-100 h-100" src="img/Loading_icon.gif" alt="Image">
+                            <img class="w-100 h-100" src="img/loadi.gif" alt="Image">
                         </div>
                         <div class="carousel-item">
                             <img class="w-100 h-100" src="" alt="Image">
