--- a/Original/shop/1/open.html
+++ b/Original/shop/1/open.html
@@ -95,7 +95,7 @@
             </div>
             <div class="col-lg-4 col-6 text-right">
                 <p class="m-0">Customer Service</p>
-                <h5 class="m-0">+012 345 6789</h5>
+                <h5 class="m-0">+94 767 0876 51</h5>
             </div>
         </div>
     </div>
@@ -183,13 +183,13 @@
                             <img class="w-100 h-100" src="img/loadi.gif" alt="Image">
                         </div>
                         <div class="carousel-item">
-                            <img class="w-100 h-100" src="" alt="Image">
+                            <img class="w-100 h-100" src="img/loadi.gif" alt="Image">
                         </div>
                         <div class="carousel-item">
-                            <img class="w-100 h-100" src="" alt="Image">
+                            <img class="w-100 h-100" src="img/loadi.gif" alt="Image">
                         </div>
                         <div class="carousel-item">
-                            <img class="w-100 h-100" src="" alt="Image">
+                            <img class="w-100 h-100" src="img/loadi.gif" alt="Image">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#product-carousel" data-slide="prev">
