--- a/video-conference-website/public/index.html
+++ b/video-conference-website/public/index.html
@@ -142,7 +142,8 @@
         </div>
     </div>
 
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.socket.io/4.0.1/socket.io.min.js"></script>
+
     <script src="script.js"></script>
 </body>
 </html>
