--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>Yunoxa</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="Yunoxa" name="keywords">
+    <meta content="Online Store" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -260,12 +260,6 @@
             </div>
         </div>
         <div class="row align-items-center bg-light py-3 px-xl-5 d-flex">
-            <div class="col-lg-4 col-12 text-center text-lg-left mb-3 mb-lg-0">
-                <a href="" class="text-decoration-none">
-                    <span class="h1 text-uppercase text-primary bg-dark px-2">YU</span>
-                    <span class="h1 text-uppercase text-dark bg-primary px-2 ml-n1">NOXA</span>
-                </a>
-            </div>
             <div class="col-lg-4 col-12 mb-3 mb-lg-0">
                 <form action="">
                 </form>
