--- a/sellerlogin.html
+++ b/sellerlogin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login | Temu: Shop Like a Billionaire</title>
+  <title>Login | Yunoxa : Shop Like a Billionaire</title>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script src="https://cdn.jsdelivr.net/npm/compressorjs@1.1.1/dist/compressor.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -318,14 +318,14 @@
 <body>
   <header class="header">
     <div class="container header-container">
-      <img src="https://img.kwcdn.com/product/open/2023-09-15/1694773030349-8a1a1a8f3d9647c9a3b3d4f3a3b3d4f3-800-800?imageView2/2/w/800/q/70/format/webp" alt="Temu Logo" class="logo">
+      <img src="https://img.kwcdn.com/product/open/2023-09-15/1694773030349-8a1a1a8f3d9647c9a3b3d4f3a3b3d4f3-800-800?imageView2/2/w/800/q/70/format/webp" alt= Yunoxa  Logo" class="logo">
     </div>
   </header>
   
   <main class="main">
     <div class="container">
       <div class="login-container">
-        <h1 class="login-title">Welcome to Temu</h1>
+        <h1 class="login-title">Welcome to Yunoxa </h1>
         <p class="login-subtitle">Shop like a billionaire</p>
         
         <div class="tabs">
