--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <i class="fas fa-search"></i>
             <input type="text" id="search-input" placeholder="Search for products" oninput="searchProducts()">
         </div>
-        <nav class="category-nav">
+        <nav class="category-nav" id="categoryNav">
             <a href="javascript:void(0)" class="category-item" data-category="Electronics">
                 <div class="category-icon">
                     <i class="fas fa-microchip"></i>
@@ -586,6 +586,34 @@
             fetchProducts();
             document.getElementById('search-input').addEventListener('input', searchProducts);
         });
+
+        // Scroll-based hide/show for category nav
+let lastScrollPosition = 0;
+const categoryNav = document.getElementById('categoryNav');
+
+window.addEventListener('scroll', function() {
+    const currentScrollPosition = window.pageYOffset || document.documentElement.scrollTop;
+    
+    if (currentScrollPosition > lastScrollPosition) {
+        // Scrolling down - hide nav
+        categoryNav.classList.add('hidden');
+    } else {
+        // Scrolling up - show nav
+        categoryNav.classList.remove('hidden');
+    }
+    
+    lastScrollPosition = currentScrollPosition;
+});
+
+// Still hide after 5 seconds if no scrolling
+setTimeout(() => {
+    categoryNav.classList.add('hidden');
+}, 5000);
+
+// Show when hovering over header area
+document.querySelector('.yunoxa-header').addEventListener('mouseenter', () => {
+    categoryNav.classList.remove('hidden');
+});
         </script>
 </body>
 </html>
