--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                                     <span class="rating-count">${rating}</span>
                                 </div>
                                 <button class="add-to-favorites" data-product='${JSON.stringify(product).replace(/'/g, "&apos;")}'>
-                                    <i class="fas fa-favorites-plus"></i>
+                                    <i class="fas fa-heart"></i>
                                 </button>
                                 <button class="buy-now" data-product='${JSON.stringify(product).replace(/'/g, "&apos;")}'>
                                     BUY NOW
