--- a/create.html
+++ b/create.html
@@ -1016,7 +1016,7 @@
             // Show success state
             successMessage.textContent = "Product added successfully!";
             successMessage.style.display = "block";
-            submitButton.innerHTML = '<i class="fas fa-check"></i> Success!';
+            submitButton.innerHTML = '<i class="fas fa-check"></i> Under Review!';
             submitButton.style.background = 'linear-gradient(135deg, #28a745, #5cb85c)';
             
             // Redirect after delay
