--- a/login.html
+++ b/login.html
@@ -781,7 +781,7 @@
         startCartSync(data.user.id)
         
         // Login successful - redirect
-        window.location.href = '/index.html'
+        window.location.href = '/Yunoxa/index.html'
       } catch (error) {
         errorElement.textContent = error.message
       }
