--- a/sellerlogin.html
+++ b/sellerlogin.html
@@ -412,7 +412,7 @@
     <div class="container">
       <div class="login-container">
         <h1 class="login-title">Welcome to Yunoxa </h1>
-        <p class="login-subtitle">Endless Choices, One Marketplace</p>
+        <p class="login-subtitle">professional seller account for free.</p>
         
         <div class="tabs">
           <div class="tab active" data-tab="login">Login</div>
