--- a/checkout1.html
+++ b/checkout1.html
@@ -528,7 +528,7 @@
                 const subtotal = (productData.price * (1 - (productData.discount || 0)/100)) * quantity;
                 const total = subtotal + shippingCost;
                 
-                const productLink = `${window.location.origin}/Yunoxa/open.html?id=${productId}`;
+                const productLink = `${window.location.origin}/open.html?id=${productId}`;
                 
                 let message = `Hello Yunoxa!%0A%0A` +
                        `I would like to order:%0A%0A` +
