--- a/login.html
+++ b/login.html
@@ -825,7 +825,7 @@ if (!termsAgreed) {
         startCartSync(data.user.id)
         
         // Login successful - redirect
-        window.location.href = '/Yunoxa/index.html'
+        window.location.href = '/index.html'
       } catch (error) {
         errorElement.textContent = error.message
       }
