--- a/checkout.html
+++ b/checkout.html
@@ -131,7 +131,7 @@
                             </div>
                             <div class="method-info">
                                 <h3>Standard Shipping</h3>
-                                <p>Estimated delivery: 5-7 business days</p>
+                                <p>Estimated delivery: Based on delivery partner</p>
                                 <p class="shipping-rate">LKR 250 per item</p>
                             </div>
                             <div class="method-price">Calculated at checkout</div>
