--- a/checkout1.html
+++ b/checkout1.html
@@ -135,7 +135,7 @@
                             </div>
                             <div class="method-info">
                                 <h3>Standard Shipping</h3>
-                                <p>Estimated delivery: 5-7 business days</p>
+                                <p>Estimated delivery: Based on delivery partner</p>
                                 <p class="shipping-rate">Delivery fee calculated based on quantity</p>
                             </div>
                             <div class="method-price" id="delivery-price">Calculating...</div>
