--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Yunoxa - yunoxa Style</title>
+    <title>Yunoxa Online Store</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="description" content="Shop like yunoxa - Amazing deals every day!">
+    <meta name="description" content="Tomorrow’s vibes, today>
 
     <!-- Favicon -->
     <link rel="icon" href="Favicon.png" type="image/png">
