--- a/open.html
+++ b/open.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Product Details | Yunoxa</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="description" content="Amazing deals on quality products - Shop like yunoxa">
+    <meta name="description" content="Amazing deals on quality products - Tomorrow’s vibes, today">
 
     <!-- Favicon -->
     <link rel="icon" href="https://img.kwcdn.com/product/open/2023-09-19/1695100220116-7e3a8b7a3a1e4b1d8f8f5a0a5d1a9a7a-goods.jpeg?imageView2/2/w/800/q/70/format/webp" type="image/jpeg">
