--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="header-icons">
                 <a href="create.html" class="sell-now-btn">
                     <i class="fas fa-coins"></i>
-                    <span>Sell Now</span>
+                    <span>Sell</span>
                   </a>
                   <a href="favorites.html">
                     <i class="fas fa-heart"></i>
