--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <title>Yunoxa Online Store</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="description" content="Tomorrow’s vibes, today>
+    <meta name="description" content="Tomorrow’s vibes, today">
 
     <!-- Favicon -->
-    <link rel="icon" href="Favicon.png" type="image/png">
+    <link rel="icon" href="Favicon.svg" type="image/png">
     <link rel="icon" href="https://img.kwcdn.com/product/open/2023-09-19/1695100220116-7e3a8b7a3a1e4b1d8f8f5a0a5d1a9a7a-goods.jpeg?imageView2/2/w/800/q/70/format/webp" type="image/jpeg">
 
     <!-- Font Awesome -->
