--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Tomorrow’s vibes, today">
 
     <!-- Favicon -->
-    <link rel="icon" href="img/Favicon.svg" type="image/png">
+    <link rel="icon" href="img/Favicon.png" type="image/png">
     <link rel="icon" href="https://img.kwcdn.com/product/open/2023-09-19/1695100220116-7e3a8b7a3a1e4b1d8f8f5a0a5d1a9a7a-goods.jpeg?imageView2/2/w/800/q/70/format/webp" type="image/jpeg">
 
     <!-- Font Awesome -->
