--- a/sellerlogin.html
+++ b/sellerlogin.html
@@ -772,7 +772,7 @@ if (!termsAgreed) {
         return
       }
       
-      if (!document.getElementById('agree-terms').checked) {
+      if (!document.getElementById('signup-terms').checked) {
         errorElement.textContent = 'You must agree to the terms and conditions'
         return
       }
