--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <div class="logo">Yunoxa<span>!</span></div>
             <div class="header-icons">
                 <a href="create.html" class="sell-now-btn">
-                    <i class="fas fa-coins"></i>
-                    <span>Sell</span>
-                  </a>
+                    <i class="fas fa-shopping-bag"></i>
+                    <span>Sell Item For Free</span>
+                  </a>                  
                   <a href="favorites.html">
                     <i class="fas fa-heart"></i>
                     
