--- a/open.html
+++ b/open.html
@@ -320,7 +320,7 @@ document.querySelector('.buy-now-btn').addEventListener('click', function(e) {
                             <a href="open.html?id=${product.id}">
                                 <div class="image-container">
                                     <img src="${product.image || 'https://via.placeholder.com/250'}" 
-                                         alt="${product.name}" 
+                                         alt="" 
                                          class="product-image">
                                 </div>
                                 <div class="product-info">
