--- a/sellerlogin.html
+++ b/sellerlogin.html
@@ -416,7 +416,7 @@
         
         <div class="tabs">
           <div class="tab active" data-tab="login">Login</div>
-          <div class="tab" data-tab="signup">Sign Up</div>
+          <div class="tab" data-tab="signup">Sign Up as Seller</div>
         </div>
         
         <!-- Login Form -->
