--- a/create.html
+++ b/create.html
@@ -541,7 +541,7 @@
                     </div>
                     <div class="price-field">
                         <label for="delivery"><i class="fas fa-truck"></i> Delivery Price (LKR)</label>
-                        <input type="number" id="delivery" class="input-field" required placeholder="Enter delivery price">
+                        <input type="number" id="delivery" class="input-field" required placeholder="Enter delivery price (350/=)">
                     </div>
                 </div>
             </div>
