--- a/checkout1.html
+++ b/checkout1.html
@@ -530,7 +530,7 @@
                 
                 const productLink = `${window.location.origin}/open.html?id=${productId}`;
                 
-                let message = `Hello Seller!%0A%0A` +
+                let message = `Hello Seller! I Found This Product on Yunoxa%0A%0A` +
                        `I would like to order:%0A%0A` +
                        `*Product:* ${productData.name}%0A` +
                        `*Quantity:* ${quantity}%0A` +
