--- a/sellerlogin.html
+++ b/sellerlogin.html
@@ -23,7 +23,7 @@
     * {
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
+      box-sizing: boder-box;
       font-family: Arial, sans-serif;
     }
     
@@ -344,10 +344,6 @@ body {
   animation: fadeInBody 1s ease-in forwards;
 }
 
-@keyframes fadeInBody {
-  0% { opacity: 0; transform: translateY(20px); }
-  100% { opacity: 1; transform: translateY(0); }
-}
 
 .container {
   max-width: 1200px;
