--- a/favorites.html
+++ b/favorites.html
@@ -283,7 +283,7 @@ img {
             <span>Favorites</span>
         </a>
     </nav>
-
+<script src="js/cookie.js"></script>
     <!-- JavaScript -->
     <script>
         // Initialize
