--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@
         </a>
     
     </nav>
+    <script src="js/cookie.js"></script>
+    
+
 
     <!-- JavaScript -->
     <script type="module">
