--- a/login.html
+++ b/login.html
@@ -413,7 +413,7 @@
       </div>
     </div>
   </main>
-
+<script src="js/cookie.js"></script>
   <script type="module">
     import { createClient } from 'https://esm.sh/@supabase/supabase-js@2'
 
