--- a/sellerlogin.html
+++ b/sellerlogin.html
@@ -469,7 +469,7 @@
             <span>Favorites</span>
         </a>
     </nav>
-
+<script src="js/cookie.js"></script>
     <script type="module">
         import { createClient } from 'https://esm.sh/@supabase/supabase-js@2'
 
