--- a/open.html
+++ b/open.html
@@ -179,7 +179,7 @@
         <i class="fas fa-check-circle"></i>
         <span>Item added to favorites!</span>
     </div>
-
+<script src="js/cookie.js"></script>
     <!-- JavaScript -->
     <script type="module">
         // Cloudflare Worker Proxy URL
