--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         </a>
     
     </nav>
-    <script src="js/cookie.js"></script>
+    <script type="module" src="js/cookie.js"></script>
     
 
 
